# advisor

./: .gitignore  .readthedocs.yaml  README.md  main.py  pyproject.toml  requirements.txt
advisor/: __init__.py  __main__.py  app.py
advisor/controllers/: app_controller.py
advisor/resources/config/: app_config.json
advisor/ui/: main_window.py
docs/: feature_development.md  requirements.txt
docs/non_sphinx_docs/: project_overview.md
docs/non_sphinx_docs/rtd/: data_and_formats.md  extending.md  index.md  project_notes.md  quickstart.md  using_the_app.md
docs/non_sphinx_docs/rtd_html/: data_and_formats.html  extending.html  index.html  project_notes.html  quickstart.html  styles.css  using_the_app.html
docs/source/: conf.py  index.rst  overview.rst  quickstart.rst
